headless: Implement HeadlessWebContentImpl::Delegate::OpenURLFromTab

OpenURLFromTab in headless used the default implementation, that does
nothing. This caused a couple of issues when the rendered asked the
browser to create new content. The most clear effect of this was that
setting window.location via JavaScript from the about:blank page had
no effect, but it also caused issues with other renderer-initiated but
browser-controlled navigations.


R=eseckler@chromium.org

Bug: 739969
Change-Id: I4c1080c2f41d5701b44b8c7e87d8a697c408e539
Reviewed-on: https://chromium-review.googlesource.com/600218
Reviewed-by: Eric Seckler <eseckler@chromium.org>
Commit-Queue: Luca Versari <veluca@google.com>
Cr-Commit-Position: refs/heads/master@{#492010}
Former-commit-id: 4128efccf60f8de7866dbb7af683db4fcdbfa59d