headless/lib/headless_web_contents_browsertest.cc
@@ -864,4 +864,51 @@ class HeadlessWebContentsRequestStorageQuotaTest
 
 HEADLESS_ASYNC_DEVTOOLED_TEST_F(HeadlessWebContentsRequestStorageQuotaTest);
 
+IN_PROC_BROWSER_TEST_F(HeadlessWebContentsTest, BrowserTabChangeContent) {
+  EXPECT_TRUE(embedded_test_server()->Start());
+
+  HeadlessBrowserContext* browser_context =
+      browser()->CreateBrowserContextBuilder().Build();
+
+  HeadlessWebContents* web_contents =
+      browser_context->CreateWebContentsBuilder().Build();
+  EXPECT_TRUE(WaitForLoad(web_contents));
+
+  std::string script = "window.location = '" +
+                       embedded_test_server()->GetURL("/hello.html").spec() +
+                       "';";
+  EXPECT_FALSE(EvaluateScript(web_contents, script)->HasExceptionDetails());
+
+  // This will time out if the previous script did not work.
+  EXPECT_TRUE(WaitForLoad(web_contents));
+}
+
+IN_PROC_BROWSER_TEST_F(HeadlessWebContentsTest, BrowserOpenInTab) {
+  EXPECT_TRUE(embedded_test_server()->Start());
+
+  HeadlessBrowserContext* browser_context =
+      browser()->CreateBrowserContextBuilder().Build();
+
+  MockHeadlessBrowserContextObserver observer;
+  browser_context->AddObserver(&observer);
+  EXPECT_CHILD_CONTENTS_CREATED(observer);
+
+  HeadlessWebContents* web_contents =
+      browser_context->CreateWebContentsBuilder()
+          .SetInitialURL(embedded_test_server()->GetURL("/link.html"))
+          .Build();
+  EXPECT_TRUE(WaitForLoad(web_contents));
+
+  EXPECT_EQ(1u, browser_context->GetAllWebContents().size());
+  // Simulates a middle-button click on a link to ensure that the
+  // link is opened in a new tab by the browser and not by the renderer.
+  std::string script =
+      "var event = new MouseEvent('click', {'button': 1});"
+      "document.getElementsByTagName('a')[0].dispatchEvent(event);";
+  EXPECT_FALSE(EvaluateScript(web_contents, script)->HasExceptionDetails());
+
+  // Check that we have a new tab.
+  EXPECT_EQ(2u, browser_context->GetAllWebContents().size());
+  browser_context->RemoveObserver(&observer);
+}
 }  // namespace headless
